# Zade

./: .dockerignore  .env.development.example  .env.example  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.s3.yaml  docker-compose.yaml
backend/: dev.Dockerfile  main.py  pyproject.toml  server.py
backend/app/: route.py
backend/app/ping/: route.py
backend/helpers/router/: __init__.py  route.py  router.py  types.py
db/scripts/: init-user-db.sh
frontend/: .eslintrc.json  dev.Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/ping/: route.ts
frontend/src/app/register/: page.tsx
frontend/src/components/background/: home.tsx  index.ts
frontend/src/components/providers/: supertokens.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/config/: supertokens.ts
supabase/volumes/api/: kong.yml
supabase/volumes/logs/: vector.yml
