[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Akshit Agarwal <139654279+AkshuAgrwl@users.noreply.github.com>"]
license = "GPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
